[gd_scene load_steps=5 format=3 uid="uid://bl7i20d1u5c3y"]

[ext_resource type="Script" uid="uid://dpynju47ypsiw" path="res://Scenes/Multiplayer.gd" id="1_npwch"]
[ext_resource type="PackedScene" uid="uid://4n7t2y1sa530" path="res://NodeScenes/PlayerField.tscn" id="2_rde7m"]
[ext_resource type="PackedScene" uid="uid://bvhhofc64x2bj" path="res://NodeScenes/OpponentField.tscn" id="3_e6n58"]
[ext_resource type="PackedScene" uid="uid://c5klv1v60a45p" path="res://Scenes/DeckCreator.tscn" id="4_ghw46"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_npwch")
player_field_scene = ExtResource("2_rde7m")
opponent_field_scene = ExtResource("3_e6n58")
deck_creator = ExtResource("4_ghw46")

[node name="HostButton" type="Button" parent="."]
offset_left = 56.0
offset_top = 96.0
offset_right = 100.0
offset_bottom = 127.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
offset_left = 55.0
offset_top = 135.0
offset_right = 101.0
offset_bottom = 166.0
text = "Join"

[node name="DeckCreator" type="Button" parent="."]
offset_left = 54.0
offset_top = 174.0
offset_right = 156.0
offset_bottom = 205.0
text = "Create Deck
"

[node name="PortNumber" type="LineEdit" parent="."]
visible = false
offset_left = 56.0
offset_top = 51.0
offset_right = 198.0
offset_bottom = 82.0
placeholder_text = "Port"

[node name="Win" type="RichTextLabel" parent="."]
visible = false
offset_left = 773.0
offset_top = 438.0
offset_right = 1081.0
offset_bottom = 547.0
theme_override_font_sizes/normal_font_size = 70
text = "WINNER"

[node name="Lose" type="RichTextLabel" parent="."]
visible = false
offset_left = 804.0
offset_top = 440.0
offset_right = 1056.0
offset_bottom = 549.0
theme_override_font_sizes/normal_font_size = 70
text = "LOSER"

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="DeckCreator" to="." method="_on_deck_creator_pressed"]
[connection signal="text_changed" from="PortNumber" to="." method="_on_port_number_text_changed"]
